# MCP-Gmail-API-Manager

./: README.md  emai_sender_server.py  email_server.py  pyproject.toml  requirements.txt
